ADD_DEFINITIONS(-DSRC_DIR=${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(rpmbuilder rpmbuilder.cc)
TARGET_LINK_LIBRARIES(rpmbuilder  zypp )

ADD_EXECUTABLE(testbed testbed.cc)
TARGET_LINK_LIBRARIES(testbed  zypp )

ADD_EXECUTABLE(getfile getfile.cc)
TARGET_LINK_LIBRARIES(getfile  zypp )

FIND_PACKAGE(Zsync)
IF(ZSYNC_FOUND)
  ADD_EXECUTABLE(zsync zsync.cc)
  TARGET_LINK_LIBRARIES(zsync  ${ZSYNC_LIBRARY} ${RCKSUM_LIBRARY})
  TARGET_LINK_LIBRARIES(zsync  zypp )
#  TARGET_LINK_LIBRARIES(zsync  zypp2 )
ENDIF(ZSYNC_FOUND)
